--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,24 @@
+dist: precise
+
 language: php
+
 php:
-  - 7.1.9
+  - 7.2
+
+addons:
+  mariadb: 10.4
+
+cache:
+  directories:
+    - node_modules
+    - vendor
+
+before_script:
+  - cp .env.travis .env
+  - sudo mysql -e 'CREATE DATABASE simpegawai;'
+  - composer self-update
+  - composer install --no-interaction
+  - php artisan migrate --no-interaction -vvv
+
+script:
+  - vendor/bin/phpuni
